<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin" 
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/app_background_color"
    tools:context=".PlayerActivity" >
    <Spinner 
        android:id="@+id/playlist_chooser"
        android:prompt="@string/playlist_chooser_prompt_text"
        android:spinnerMode="dropdown"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/playlist_chooser_height"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true" 
    	android:drawSelectorOnTop="false"
    	android:dropDownSelector="@drawable/play_list_selector" 
    	android:background="@drawable/play_list_selector"/>
	<ListView 
	    android:id="@+id/song_chooser"
	    android:choiceMode="singleChoice"
	    android:layout_width="match_parent"
	    android:layout_height="@dimen/songlist_layout_height" 
	    android:layout_below="@id/playlist_chooser"
	    android:layout_marginTop="5dp"
	    android:drawSelectorOnTop="false" 
    	android:smoothScrollbar="true" 
    	android:cacheColorHint="@color/song_selector_selected"
	    android:background="@drawable/song_list_background"/>
	<Button 
	    android:id="@+id/play_button" 
	    android:layout_width="@dimen/player_button_width"
	    android:layout_height="@dimen/player_button_height" 
	    android:layout_below="@id/song_chooser"
	    android:layout_marginTop="5dp"
	    android:text="@string/play_button_text"
	    android:background="@drawable/button_selector"
	    android:textSize="@dimen/player_button_text_size"
	    android:singleLine="true"/>
	<Button 
	    android:id="@+id/stop_button" 
	    android:layout_width="@dimen/player_button_width"
	    android:layout_height="@dimen/player_button_height" 
	    android:layout_below="@id/song_chooser"
	    android:layout_toRightOf="@id/play_button"
	    android:layout_marginTop="5dp"
	    android:layout_marginLeft="10dp"
	    android:text="@string/stop_button_text"
	    android:background="@drawable/button_selector"
	    android:textSize="@dimen/player_button_text_size"/>
	<Button 
	    android:id="@+id/pause_button" 
	    android:layout_width="@dimen/player_button_width"
	    android:layout_height="@dimen/player_button_height" 
	    android:layout_below="@id/song_chooser"
	    android:layout_toRightOf="@id/stop_button"
	    android:layout_marginTop="5dp"
	    android:layout_marginLeft="10dp"
	    android:text="@string/pause_button_text"
	    android:background="@drawable/button_selector"
	    android:textSize="@dimen/player_button_text_size"/>
	<Button 
	    android:id="@+id/back_button" 
	    android:layout_width="@dimen/player_button_width"
	    android:layout_height="@dimen/player_button_height" 
	    android:layout_below="@id/play_button"
	    android:layout_marginTop="5dp"
	    android:text="@string/back_track_button_text"
	    android:background="@drawable/button_selector"
	    android:textSize="@dimen/player_button_text_size"/>
	<Button 
	    android:id="@+id/skip_button" 
	    android:layout_width="@dimen/player_button_width"
	    android:layout_height="@dimen/player_button_height" 
	    android:layout_below="@id/play_button"
	    android:layout_toRightOf="@id/back_button"
	    android:layout_marginTop="5dp"
	    android:layout_marginLeft="10dp"
	    android:text="@string/skip_track_button_text"
	    android:background="@drawable/button_selector"
	    android:textSize="@dimen/player_button_text_size"/>
    <Button 
        android:id="@+id/shuffle_button"
	    android:layout_width="@dimen/player_button_width"
	    android:layout_height="@dimen/player_button_height" 
	    android:layout_below="@id/pause_button"
	    android:layout_toRightOf="@id/skip_button"
	    android:layout_marginTop="5dp"
	    android:layout_marginLeft="10dp"
	    android:text="@string/shuffle_button_text"
	    android:background="@drawable/button_selector"
	    android:textSize="@dimen/player_button_text_size"/>
</RelativeLayout>